temporary disable cmakelists file in src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project ("PerlinNoise-Viewer" LANGUAGES CXX)
 add_executable (${PROJECT_NAME} "src/Main.cpp")
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
-set (ENTITIES_DIR "Entities")
-set (SERVICES_DIR "Services")
-set (SHADERS_DIR "Shaders")
+#set (ENTITIES_DIR "Entities")
+#set (SERVICES_DIR "Services")
+#set (SHADERS_DIR "Shaders")
 
 #include OpenGL
 find_package (OpenGL REQUIRED)
@@ -15,13 +15,16 @@ find_package (OpenGL REQUIRED)
 add_subdirectory ("dependencies")
 
 #link libraries
-foreach (library OpenGL::GL imgui)
+foreach (library OpenGL::GL imgui #[[PerlinNoise-Kernel]])
     target_link_libraries (${PROJECT_NAME} PRIVATE ${library})
 endforeach ()
 
 # include code
-add_subdirectory ("src")
+#include our code
+#[[foreach (library ${ENTITIES_DIR} ${SERVICES_DIR} ${SHADERS_DIR})
+    add_subdirectory (src/${library})
+endforeach ()
 
 foreach (library ${ENTITIES_DIR} ${SERVICES_DIR} ${SHADERS_DIR})
     target_link_libraries (${PROJECT_NAME} PRIVATE ${library})
-endforeach ()
+endforeach ()]]
