minimal cmake part 3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
-﻿cmake_minimum_required (VERSION 3.19)
+﻿# main cmake file
+cmake_minimum_required (VERSION 3.19)
 project ("PerlinNoise-Viewer" LANGUAGES CXX)
 
-add_executable (${PROJECT_NAME} "src/Main.cpp")
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-
-#set (ENTITIES_DIR "Entities")
-#set (SERVICES_DIR "Services")
-#set (SHADERS_DIR "Shaders")
+set (SHADERS_DIR "Shaders")
 
 #include OpenGL
 find_package (OpenGL REQUIRED)
@@ -14,17 +10,10 @@ find_package (OpenGL REQUIRED)
 #include 3rd party libraries
 add_subdirectory ("dependencies")
 
-#link libraries
-foreach (library OpenGL::GL imgui #[[PerlinNoise-Kernel]])
-    target_link_libraries (${PROJECT_NAME} PRIVATE ${library})
-endforeach ()
-
-# include code
 #include our code
-#[[foreach (library ${ENTITIES_DIR} ${SERVICES_DIR} ${SHADERS_DIR})
-    add_subdirectory (src/${library})
-endforeach ()
+add_subdirectory ("src")
 
-foreach (library ${ENTITIES_DIR} ${SERVICES_DIR} ${SHADERS_DIR})
+#link libraries
+foreach (library OpenGL::GL imgui )#PerlinNoise-Kernel)
     target_link_libraries (${PROJECT_NAME} PRIVATE ${library})
-endforeach ()]]
+endforeach ()
