--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,30 +2,21 @@
 cmake_minimum_required (VERSION 3.19)
 project ("PerlinNoise-Viewer" LANGUAGES CXX)
 
-function(add_subdirectory_checked dir)
-    if (NOT EXISTS ${dir}/CMakeLists.txt)
-        message(FATAL_ERROR
-                "Error: Subdirectory " ${dir} " not found\n"
-                "You may have cloned the repository without the --recursive flag\n"
-                "Use `git submodule update --init --recursive` to get the required dependencies"
-                )
-    endif ()
-    add_subdirectory(${dir})
-endfunction()
+include(cmake/utils.cmake)
 
 # set external dependencies list
 # glfwpp has public linkage of glew, glfw & imgui
 set (dependenciesList
     OpenGL::GL
+    glad
     GLFWPP
-    libglew_static
-    Imgui
-    # PerlinNoise-Kernel
+    imgui
+    #PerlinNoise-Kernel
 )
 # set internal sources list
 set (ShaderLib "Shader")
 set (srcsList
-    #${ShaderLib}
+    ${ShaderLib}
 )
 
 # include OpenGL
