--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,21 +1,16 @@
 # here we add all dependencies
 cmake_minimum_required (VERSION 3.19)
-project (${PROJECT_NAME} LANGUAGES CXX C)
+project (${PROJECT_NAME} LANGUAGES CXX)
 
-# glad
-# required C language
-add_library (glad
-	glad/include/glad/glad.h
-	glad/src/glad.c)
-
-target_include_directories (glad PUBLIC glad/src)
-target_include_directories (glad PUBLIC glad/include)
-
+#glad
+add_subdirectory_checked(${CMAKE_CURRENT_SOURCE_DIR}/glad)
 
 # GLFWPP
-# contains imgui + glfw (+ glew)
-set(GLFWPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # disable building GLFWPP examples
+set(GLFWPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # disable building examples
 add_subdirectory_checked (${CMAKE_CURRENT_SOURCE_DIR}/glfwpp)
 
+#imgui
+add_subdirectory_checked(${CMAKE_CURRENT_SOURCE_DIR}/imgui)
+
 #PerlinNoise-Kernel
-#add_subdirectory (PerlinNoise-Kernel)
+#add_subdirectory_checked (PerlinNoise-Kernel)
