--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -10,7 +10,8 @@ set(GLFWPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # disable building examples
 add_subdirectory_checked (${CMAKE_CURRENT_SOURCE_DIR}/glfwpp)
 
 #imgui
-add_subdirectory_checked(${CMAKE_CURRENT_SOURCE_DIR}/imgui)
+add_subdirectory_checked (${CMAKE_CURRENT_SOURCE_DIR}/imgui)
 
 #PerlinNoise-Kernel
-#add_subdirectory_checked (PerlinNoise-Kernel)
+# This is bundled so we don't need to install it
+add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/PerlinNoise-Kernel)
