--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/MaroonSkull/PerlinNoise-Kernel
 [submodule "dependencies/glfwpp"]
 	path = dependencies/glfwpp
-	url = https://github.com/janekb04/glfwpp
+	url = https://github.com/MaroonSkull/glfwpp
 [submodule "dependencies/imgui/imgui"]
 	path = dependencies/imgui/imgui
 	url = https://github.com/ocornut/imgui
