--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -7,6 +7,9 @@ add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/glad)
 set (GLFWPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # disable building examples
 add_subdirectory_checked (${CMAKE_CURRENT_SOURCE_DIR}/glfwpp)
 
+# glm
+add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/glm)
+
 #imgui
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/imgui)
 
