--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -16,6 +16,18 @@ add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/imgui)
 # implot
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/implot)
 
+# implot3d
+set(IMPLOT3D_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/implot3d)
+set(IMPLOT3D_SOURCE
+    ${IMPLOT3D_SOURCE_DIR}/implot3d.cpp
+    ${IMPLOT3D_SOURCE_DIR}/implot3d_demo.cpp
+    ${IMPLOT3D_SOURCE_DIR}/implot3d_items.cpp
+    ${IMPLOT3D_SOURCE_DIR}/implot3d_meshes.cpp
+)
+add_library(implot3d STATIC ${IMPLOT3D_SOURCE})
+target_include_directories(implot3d PUBLIC ${IMPLOT3D_SOURCE_DIR})
+target_link_libraries(implot3d PUBLIC imgui)
+
 #PerlinNoise-Kernel
 # This is bundled so we don't need to install it
 if (PNV_PREFER_BUNDLED_THIRD_PARTIES)
